crates/runtime/tests/models/snapshots/integration_models__models__openai__chat_1_ai_completion_input.snap
---
source: crates/runtime/tests/models/openai.rs
expression: "sql_to_display(&rt,\nformat!(r#\"SELECT count(1) as number_of_ai_completion_tasks\n                FROM runtime.task_history\n                WHERE start_time >= '{}'\n                AND task='ai_completion';\n            \"#,\nInto::<DateTime<Utc>>::into(task_start_time).to_rfc3339()).as_str()).await.expect(\"Failed to execute HTTP SQL query\")"
snapshot_kind: text
---
+-------------------------------+
| number_of_ai_completion_tasks |
+-------------------------------+
| 2                             |
+-------------------------------+
