crates/runtime/tests/models/snapshots/integration_models__models__openai__chat_1_response_choices.snap
---
source: crates/runtime/tests/models/openai.rs
expression: "format!(\"{:#?}\", response.choices)"
---
[
    ChatChoice {
        index: 0,
        message: ChatCompletionResponseMessage {
            content: Some(
                "10",
            ),
            reasoning_content: None,
            refusal: None,
            tool_calls: None,
            annotations: Some(
                [],
            ),
            role: Assistant,
            function_call: None,
            audio: None,
        },
        finish_reason: Some(
            Stop,
        ),
        logprobs: None,
    },
]
