crates/runtime/tests/models/snapshots/integration_models__models__openai__chat_1_sql_tasks.snap
---
source: crates/runtime/tests/models/openai.rs
expression: "sql_to_display(&rt,\nformat!(\"SELECT task, count(1) > 0 as task_used\n                FROM runtime.task_history\n                WHERE start_time >= '{}'\n                AND task in ('tool_use::list_datasets', 'tool_use::sql', 'tool_use::sql_query')\n                GROUP BY task\n                ORDER BY task;\",\nInto::<DateTime<Utc>>::into(task_start_time).to_rfc3339()).as_str()).await.expect(\"Failed to execute HTTP SQL query\")"
---
+-------------------------+-----------+
| task                    | task_used |
+-------------------------+-----------+
| tool_use::list_datasets | true      |
| tool_use::sql           | true      |
+-------------------------+-----------+
