crates/runtime/tests/models/snapshots/integration_models__models__openai__chat_2_document_similarity_input.snap
---
source: crates/runtime/tests/models/openai.rs
expression: pretty_json_str(&document_similarity_task.1)?
---
{
  "datasets": [
    "spice.public.item"
  ],
  "limit": 5,
  "text": "vehicles"
}
