crates/runtime/tests/models/snapshots/integration_models__models__openai__chat_2_document_similarity_tasks.snap
---
source: crates/runtime/tests/models/openai.rs
expression: "serde_json::to_string_pretty(&combined_value).expect(\"Failed to serialize task_input\")"
---
[
  {
    "datasets": [
      "spice.public.item"
    ],
    "keywords": [
      "journalists"
    ],
    "limit": 5
  },
  {
    "datasets": [
      "spice.public.item"
    ],
    "keywords": [
      "vehicles"
    ],
    "limit": 5
  }
]
