crates/runtime/tests/models/snapshots/integration_models__models__openai__chat_2_response.snap
---
source: crates/runtime/tests/models/openai.rs
expression: "serde_json::to_string_pretty(&selector.find(&resp_value)).expect(\"Failed to serialize response.choices\")"
---
[
  1
]
