crates/runtime/tests/models/snapshots/integration_models__models__openai__chat_2_response_choices.snap
---
source: crates/runtime/tests/models/openai.rs
expression: "format!(\"{:#?}\", response.choices)"
---
[
    ChatChoice {
        index: 0,
        message: ChatCompletionResponseMessage {
            content: Some(
                "__placeholder__",
            ),
            refusal: None,
            tool_calls: None,
            role: Assistant,
            function_call: None,
        },
        finish_reason: Some(
            Stop,
        ),
        logprobs: None,
    },
]
