crates/runtime/tests/models/snapshots/integration_models__models__openai__chat_completion.snap
---
source: crates/runtime/tests/models/openai.rs
expression: "normalize_chat_completion_response(response, false)"
---
{
  "id": "id_val",
  "choices": [
    {
      "index": 0,
      "message": {
        "content": "10",
        "refusal": null,
        "tool_calls": null,
        "role": "assistant",
        "function_call": null
      },
      "finish_reason": "stop",
      "logprobs": null
    }
  ],
  "created": "created_val",
  "model": "openai_model",
  "service_tier": null,
  "system_fingerprint": "system_fingerprint_val",
  "object": "chat.completion",
  "usage": {
    "prompt_tokens": "prompt_tokens_val",
    "completion_tokens": "completion_tokens_val",
    "total_tokens": "total_tokens_val",
    "prompt_tokens_details": "prompt_tokens_details_val",
    "completion_tokens_details": "completion_tokens_details_val"
  }
}
