crates/runtime/tests/models/snapshots/integration_models__models__openai__chat_completion_gpt5_mini.snap
---
source: crates/runtime/tests/models/openai.rs
expression: "normalize_chat_completion_response(response, false)"
---
{
  "choices": [
    {
      "finish_reason": "stop",
      "index": 0,
      "message": {
        "annotations": [],
        "content": "10",
        "role": "assistant"
      }
    }
  ],
  "created": "created_val",
  "id": "id_val",
  "model": "openai_model",
  "object": "chat.completion",
  "service_tier": "default",
  "usage": {
    "completion_tokens": "completion_tokens_val",
    "completion_tokens_details": "completion_tokens_details_val",
    "prompt_tokens": "prompt_tokens_val",
    "prompt_tokens_details": "prompt_tokens_details_val",
    "total_tokens": "total_tokens_val"
  }
}
